# glSolar-System

./: .gitignore  CMakeLists.txt
Source Files/: CMakeLists.txt  main.cpp
Third Party/: CMakeLists.txt
cmake/: compiler_options.cmake
shaders/: lighting.frag  lighting.vert
src/: Camera.cpp  Camera.h  IShaderManager.h  ITextureManager.h  LoggedShaderManager.cpp  LoggedShaderManager.h  LoggedTextureManager.cpp  LoggedTextureManager.h  Shader.cpp  ShaderLocator.cpp  ShaderLocator.h  ShaderManager.cpp  ShaderManager.h  Sphere.cpp  Sphere.h  SystemSimulation.cpp  SystemSimulation.h  Texture.cpp  Texture.h  TextureLocator.cpp  TextureLocator.h  TextureManager.cpp  TextureManager.h  main.cpp  shader.h
